feat: add torpedo damage calculation (#5)